# simple_generic_fsm

./: .clang-format  .gitignore  CMakeLists.txt  fsm.hpp
tests/: Tests.cpp
